--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El club de la Gyoza</title>
+    <title> 🥟 El club de la Gyoza </title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap" rel="stylesheet"> <!--Akaya Kanadaka-->
     <link rel="stylesheet" href="css/style.css">
@@ -34,7 +34,7 @@
             <button>Volver 🥟</button>
         </div>
         <footer>
-            <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
+            <p>LECTURA ACTUAL... <span>Indómita - Raisa Martín Espinosa 🦇🧛</span></p>
         </footer>
     </section>
 </body>
