--- a/nosotras.html
+++ b/nosotras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El club de la Gyoza - nosotras</title>
+    <title> 🥟 El club de la Gyoza - nosotras</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style_nosotras.css">
@@ -55,9 +55,6 @@
                 <a href="https://github.com/lmoraromero" class="github"><img src="img/git.png" alt="github"></a>
             </div>
         </section>
-        <footer>
-            <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</p>
-        </footer>
     </section>
 </body>
 </html>
