--- a/review.html
+++ b/review.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El club de la Gyoza - reseñas</title>
+    <title> 🥟 El club de la Gyoza - reseñas</title>
     <link href="https://fonts.googleapis.com/css2?family=Lekton:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet"> <!--Lekton-->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style_review.css">
@@ -47,7 +47,7 @@
             </article>
         </div>
         <footer>
-            <p>LECTURA ACTUAL... <span>El Alma del Brujo - Belén Martínez ♥️🧙</span></p>
+            <p>LECTURA ACTUAL... <span>Indómita - Raisa Martín Espinosa 🦇🧛</span></p>
         </footer>
     </section>
     <script>
